Fix dropbutton overlapping text in paragraph widgets
See https://www.drupal.org/project/paragraphs/issues/3109862

--- a/web/themes/custom/union_admin/css/paragraphs.widget.enhancements.css
+++ b/web/themes/custom/union_admin/css/paragraphs.widget.enhancements.css
@@ -26,3 +26,7 @@
 .paragraphs-subform .field--name-status {
   float: right;
 }
+
+.js .field--widget-paragraphs .paragraphs-dropbutton-wrapper .dropbutton-widget {
+  position: relative;
+}
